syntax = "proto3";

package pb.auth.v1;

option go_package = "chatbox/pb";

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc CheckLoggedIn(CheckLoggedInRequest) returns (CheckLoggedInResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message SignUpRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message SignUpResponse {
  int32 user_id = 1;
  string desc = 2;
  bool status = 3;
}

message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignInResponse {
  string session_id = 1;
  string desc = 2;
  bool status = 3;
}

message CheckLoggedInRequest {
  string session_id = 1;
}

message CheckLoggedInResponse {
  bool is_logged_in = 1;
}

message LogoutRequest {
  string session = 1;
}

message LogoutResponse {
  bool success = 1;
}
